[project]
name = "sp500-earn-price-pkg"
version = "1.0.0"
description = "Compare S&P 500's earn-price ratio to 10-yr TIPS rate"
readme = "README.md"
authors = [
    { name = "RW Kopcke", email = "rwkopckel@yahoo.com" }
]
requires-python = ">=3.12.4"
dependencies = [
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
]

[project.scripts]
earn-price = "sp500_earn_price_pkg.entry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
